<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
              style="@style/text_normal"
                android:text="@string/travel_order_num"
                android:textColor="@color/text_color_main"
                />
            <TextView
               style="@style/text_normal"
                android:id="@+id/tv_order_num"
                android:text="23123123"
                android:textColor="@color/text_color_main"
                />
        </LinearLayout>
        <TextView
           style="@style/text_normal"
            android:textColor="@color/main_bg"
            android:id="@+id/tv_order_statue"
            android:text="@string/travel_order_paying"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="10dp"
       android:background="@color/bg">
       <TextView
           style="@style/text_normal"
           android:id="@+id/tv_order_product_name"
           android:text="张家界天门山门票"
           android:textSize="16sp"
           android:textColor="@color/text_color_main"
           />
       <TextView
           android:layout_marginTop="10dp"
           style="@style/text_normal"
           android:id="@+id/tv_order_product_content"
           android:text="天门狐仙全名《天门狐仙 新刘海砍樵》，是一部超震撼的山水实景演出，魔幻音乐剧，股市改变"
           android:textColor="@color/text_color_main"
           android:lines="2"
           android:ellipsize="end"
           />
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical|right"
        >
        <TextView
           style="@style/text_normal"
            android:text="@string/travel_order_count"
            android:textColor="@color/text_color_main"
            />
        <TextView
            style="@style/text_normal"
            android:text="3"
            android:textColor="@color/text_color_main"
            android:id="@+id/tv_product_count"
            />
        <TextView
            android:layout_marginLeft="5dp"
            style="@style/text_normal"
            android:textColor="@color/main_bg"
            android:text="@string/travel_order_total_price"
            />
        <TextView
            style="@style/text_normal"
            android:textSize="16sp"
            android:textColor="@color/main_bg"
            android:text="￥180"
            android:id="@+id/tv_order_total_price"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="right|center_vertical"
        >
        <TextView
            style="@style/text_normal"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="退款"
            android:id="@+id/tv_travel_order_refund"
            android:textColor="@color/white"
            android:background="@drawable/btn_blue_bg"
            />
        <TextView
            style="@style/text_normal"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/travel_order_pay"
            android:id="@+id/tv_travel_order_pay"
            android:textColor="@color/white"
            android:background="@drawable/btn_blue_bg"
            android:layout_marginLeft="10dp"
            />

        <TextView
            style="@style/text_normal"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/travel_order_comment"
            android:id="@+id/tv_travel_order_comment"
            android:textColor="@color/white"
            android:background="@drawable/btn_blue_bg"
            android:layout_marginLeft="10dp"
            />
        <TextView
            style="@style/text_normal"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="删除"
            android:id="@+id/tv_travel_order_delete"
            android:textColor="@color/white"
            android:background="@drawable/btn_blue_bg"
            android:layout_marginLeft="10dp"
            />
        <TextView
            style="@style/text_normal"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/travel_order_check_detail"
            android:id="@+id/tv_travel_order_check_detail"
            android:textColor="@color/white"
            android:background="@drawable/btn_blue_bg"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
</LinearLayout>