<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.bm.csxy.widget.NavBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nav"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical"
                android:background="@color/white"
                >
                <TextView
                    style="@style/text_normal"
                    android:id="@+id/tv_product_name"
                    android:textColor="@color/text_color_main"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    />
                <TextView
                    android:layout_marginTop="5dp"
                    style="@style/text_normal"
                    android:id="@+id/tv_product_introduce"
                    android:textColor="@color/text_color_main"
                    />
            </LinearLayout>

            <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/white"
                >
                <TextView
                    style="@style/text_normal"
                    android:text="@string/choice_product_day"
                    android:layout_centerVertical="true"
                    android:textColor="@color/text_color_main"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    >
                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="22dp"
                        android:background="@drawable/et_bg"
                        android:gravity="center_vertical"
                        android:id="@+id/ll_year"
                        >
                        <TextView
                            style="@style/text_normal"
                            android:layout_marginLeft="10dp"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:id="@+id/tv_year"
                            android:hint="@string/choice_product_year"
                            />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:src="@mipmap/go_down"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="22dp"
                        android:background="@drawable/et_bg"
                        android:gravity="center_vertical"
                        android:id="@+id/ll_month"
                        android:layout_marginLeft="10dp"
                        >
                        <TextView
                            style="@style/text_normal"
                            android:layout_marginLeft="10dp"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:id="@+id/tv_month"
                            android:hint="@string/choice_product_month"
                            />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingLeft="10dp"
                            android:src="@mipmap/go_down"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="22dp"
                        android:background="@drawable/et_bg"
                        android:gravity="center_vertical"
                        android:id="@+id/ll_day"
                        android:layout_marginLeft="10dp"
                        >
                        <TextView
                            style="@style/text_normal"
                            android:layout_marginLeft="10dp"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:id="@+id/tv_day"
                            android:hint="@string/choice_product_day_hint"
                            />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingRight="10dp"
                            android:src="@mipmap/go_down"
                            />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_marginTop="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="10dp"
                >
                <TextView
                    style="@style/text_normal"
                    android:text="@string/choice_product_price"
                    android:textColor="@color/text_color_main"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    >
                    <TextView
                        android:layout_centerVertical="true"
                        style="@style/text_normal"
                        android:textColor="@color/app_blue"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_product_name_"
                        android:text="天门狐仙普通座门票"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_centerInParent="true"

                        >
                        <TextView
                            style="@style/text_normal"
                            android:textColor="@color/app_yellow"
                            android:textSize="12sp"
                            android:text="@string/product_money_f"
                            />
                        <TextView
                            style="@style/text_normal"
                            android:textColor="@color/app_yellow"
                            android:id="@+id/tv_product_price"
                            android:text="188"
                            android:textSize="15sp"
                            />
                        <TextView
                            style="@style/text_normal"
                            android:textColor="@color/app_yellow"
                            android:textSize="12sp"
                            android:text="@string/choice_product_hint"
                            />
                    </LinearLayout>
                    <com.bm.csxy.widget.AddView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:id="@+id/addview"
                        ></com.bm.csxy.widget.AddView>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                >

                    <TextView
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:background="@color/bg"
                        style="@style/text_normal"
                        android:textColor="@color/text_color_main"
                        android:text="@string/choice_product_hint_1"
                        />

                <TextView
                    style="@style/text_normal"
                    android:textColor="@color/text_color_main"
                    android:id="@+id/tv_product_contain"
                    android:text="天门狐仙表演门票"
                    android:padding="10dp"
                    />

                    <TextView
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:background="@color/bg"
                        style="@style/text_normal"
                        android:textColor="@color/text_color_main"
                        android:text="@string/choice_product_hint_2"
                        />

                <TextView
                    style="@style/text_normal"
                    android:textColor="@color/text_color_main"
                    android:id="@+id/tv_product_no_contain"
                    android:text="不含景区内、其他娱乐项目、个人所产生的费用；"
                    android:padding="10dp"
                    />


                    <TextView
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:background="@color/bg"
                        style="@style/text_normal"
                        android:textColor="@color/text_color_main"
                        android:text="@string/choice_product_ticket_type"
                        />

                <TextView
                    android:padding="10dp"
                    style="@style/text_normal"
                    android:textColor="@color/text_color_main"
                    android:id="@+id/tv_ticket_type"
                    android:text="成人票 官方规定（1.2米以上儿童及60岁以上老人成人同票）"
                    />
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    >
                    <TextView
                        style="@style/text_normal"
                        android:textColor="@color/text_color_main"
                        android:text="@string/choice_product_f_1"
                        />
                    <TextView
                        style="@style/text_normal"
                        android:textColor="@color/text_color_main"
                        android:text="@string/choice_product_show_time"
                        />
                    <TextView
                        style="@style/text_normal"
                        android:textColor="@color/text_color_main"
                        android:text="@string/choice_product_f_2"
                        />

                </LinearLayout>
                <TextView
                    android:visibility="gone"
                    style="@style/text_normal"
                    android:textColor="@color/text_color_main"
                    android:id="@+id/tv_show_time"
                    android:text="每月3月初-12初；每晚8点20"
                    />
            </LinearLayout>

            <com.corelibs.views.NoScrollingListView
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lv_passenger"
                android:listSelector="@color/transparent"
                android:cacheColorHint="@color/transparent"
                android:divider="@color/bg"
                android:dividerHeight="5dp"
                android:scrollbars="none"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    >
                    <TextView
                        style="@style/text_normal"
                        android:text="@string/choice_product_customer"
                        android:textColor="@color/text_color_main"
                        />
                    <TextView
                        style="@style/text_normal"
                        android:text="@string/choice_product_customer_center"
                        android:textColor="@color/text_color_main"
                        android:layout_alignParentRight="true"
                        android:id="@+id/tv_center"
                        />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@color/white">
                    <TextView
                        style="@style/text_normal"
                        android:textColor="@color/text_color_main"
                        android:textSize="12sp"
                        android:text="@string/choice_product_customer_hint"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:layout_marginLeft="20dp"
                        style="@style/text_normal"
                        android:textColor="@color/app_blue"
                        android:text="@string/choice_product_connect_customer"
                        android:background="@drawable/corner_tv"
                        android:padding="3dp"
                        android:id="@+id/tv_connect_customer"
                        />
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:padding="10dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        style="@style/text_normal"
                        android:textColor="@color/text_color_main"
                        android:text="@string/choice_product_agreemet_hint"
                        />
                    <TextView
                        android:layout_marginLeft="5dp"
                        style="@style/text_normal"
                        android:textColor="@color/app_blue"
                        android:text="@string/choice_product_agreemet"
                        />
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/go_right"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        >
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                style="@style/text_normal"
                android:textColor="@color/text_color_main"
                android:text="@string/choice_product_money"
                />
            <TextView
                style="@style/text_normal"
                android:textColor="@color/app_yellow"
                android:text="@string/product_money_f"
                android:textSize="12sp"
                />
            <TextView
                style="@style/text_normal"
                android:id="@+id/tv_total_price"
                android:textColor="@color/app_yellow"
                android:text="188"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/main_bg"
            android:id="@+id/ll_confirm_order"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icn_feedback"
                />
            <TextView
                android:layout_marginLeft="5dp"
                style="@style/text_normal"
                android:text="@string/choice_confirm_order"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>